--- a/KRNL.WebMVC/Views/Cooperator/Details.cshtml
+++ b/KRNL.WebMVC/Views/Cooperator/Details.cshtml
@@ -31,6 +31,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ContactType)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ContactType)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Phone)
         </dt>
 
