--- a/KRNL.WebMVC/Views/Message/Create.cshtml
+++ b/KRNL.WebMVC/Views/Message/Create.cshtml
@@ -4,54 +4,81 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create New Message</h2>
+<h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <br />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @*<div class="form-group">
-            @Html.LabelFor(model => model.MessageId, htmlAttributes: new { @class = "control-label col-md-2" })
+
+    <div class="form-horizontal">
+        <h4>MessageCreate</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.LocationId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MessageId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MessageId, "", new { @class = "text-danger" })
+                @Html.DropDownList("LocationId", new SelectList(ViewBag.locations, "LocationId", "LocationCode"), null, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.LocationId, "", new { @class = "text-danger" })
             </div>
-        </div>*@
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.LocationId, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("LocationId", new SelectList(ViewBag.locations, "LocationId", "LocationCode"), null, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.LocationId, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 enumDropDown">
+                @Html.EnumDropDownListFor(model => model.Rating, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    @*<div class="form-group">
-            @Html.LabelFor(model => model.DateCreated, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateCreated, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateCreated, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+                @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+                @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.HumanGrowthStage, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 enumDropDown">
+                @Html.EnumDropDownListFor(model => model.HumanGrowthStage, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.HumanGrowthStage, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.JobOne, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 enumDropDown">
+                @Html.EnumDropDownListFor(model => model.JobOne, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.JobOne, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.JobTwo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 enumDropDown">
+                @Html.EnumDropDownListFor(model => model.JobTwo, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.JobTwo, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.JobThree, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 enumDropDown">
+                @Html.EnumDropDownListFor(model => model.JobThree, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.JobThree, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
         </div>
     </div>
-</div>
 }
 
 <div>
