--- a/KRNL.WebMVC/Views/Message/Index.cshtml
+++ b/KRNL.WebMVC/Views/Message/Index.cshtml
@@ -3,43 +3,199 @@
 @{
     ViewBag.Title = "Index";
 }
+<h2>Job Log</h2>
 
-<h2>Message Board</h2>
+<h4>
+    @Html.ActionLink("Add New Job", "Create")
+</h4>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Comment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LocationCode)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comment)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateCreated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LocationCode)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MessageId }) |
-            @Html.ActionLink("View", "Details", new { id=item.MessageId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MessageId })
-        </td>
-    </tr>
+@using (Html.BeginForm())
+{
+    <p>
+        <div class="searchBar">
+            @Html.TextBox("searchString")
+            <input type="submit" value="Filter by LocID" class="searchButton" />
+        </div>
+    </p>
 }
 
+<table class="table message">
+    <tr class="messageHeader">
+        <th width=16% class="messageHeaderTopLeft">
+            @*@Html.DisplayNameFor(model => model.LocationCode)*@
+        </th>
+        <th width=28%>
+            @*@Html.DisplayNameFor(model => model.DateCreated)*@
+        </th>
+        <th width=28%>
+            @*@Html.DisplayNameFor(model => model.PredictedGrowthStage)*@
+        </th>
+        <th width=28% class="messageHeaderTopRight">
+            @*@Html.DisplayNameFor(model => model.HumanGrowthStage)*@
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr class="spacer">
+            <td class="spacer" colspan="4"></td>
+        </tr>
+        <tbody class="comment">
+            <tr class="messageTop">
+                <td class="message messageTopLeft">
+                    <div class="messageLabel">Location:</div>
+                    @Html.ActionLink(item.LocationCode.ToUpper(), "Edit", "Location", new { id = item.LocationId }, null)
+                </td>
+                <td class="message">
+                    <div class="messageLabel">Date:</div>
+                    @Html.DisplayFor(modelItem => item.DateCreated)
+                </td>
+                <td class="message ">
+                    <div class="messageLabel">Predicted:</div>
+                    @Html.DisplayFor(modelItem => item.PredictedGrowthStage)
+                </td>
+                <td class="message messageTopRight ">
+                    <div class="messageLabel">Actual:</div>
+                    @Html.DisplayFor(model => item.HumanGrowthStage)
+                </td>
+            </tr>
+            <tr class="messageBottom">
+                <td class="messageBottomLeft" colspan="2">
+                    <p class="comment">
+                        @Html.DisplayFor(modelItem => item.Comment)
+                    </p>
+                    @switch (item.Rating)
+                    {
+                        case KRNL.Data.rating.Excellent:
+                            <img class="ratingIcon" src="/img/rexcellent.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.rating.AboveAverage:
+                            <img class="ratingIcon" src="/img/raboveaverage.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.rating.Average:
+                            <img class="ratingIcon" src="/img/raverage.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.rating.BelowAverage:
+                            <img class="ratingIcon" src="/img/rbelowaverage.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.rating.Poor:
+                            <img class="ratingIcon" src="/img/rpoor.png" alt="KRNL">
+                            break;
+                        default:
+                            break;
+                    }
+                </td>
+                <td class="messageBottomRight alignRight" colspan="2">
+                    @switch (item.JobOne)
+                    {
+                        case KRNL.Data.job.Cultivating:
+                            <img class="messageIcon" src="/img/iplow.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.DroneFlight:
+                            <img class="messageIcon" src="/img/idrone.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.HerbicideSpraying:
+                            <img class="messageIcon" src="/img/iherbicide.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.InsecticideSpraying:
+                            <img class="messageIcon" src="/img/iinsecticide.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.NitrogenApplication:
+                            <img class="messageIcon" src="/img/initrogen.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.Notes:
+                            <img class="messageIcon" src="/img/inotes.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.PlantEarHeights:
+                            <img class="messageIcon" src="/img/ipande.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.Staking:
+                            <img class="messageIcon" src="/img/istake.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.StandCounts:
+                            <img class="messageIcon" src="/img/istandcounts.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.WeedManagement:
+                            <img class="messageIcon" src="/img/ihoe.png" alt="KRNL">
+                            break;
+                        default:
+                            break;
+                    }
+
+                    @switch (item.JobTwo)
+                    {
+                        case KRNL.Data.job.Cultivating:
+                            <img class="messageIcon" src="/img/iplow.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.DroneFlight:
+                            <img class="messageIcon" src="/img/idrone.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.HerbicideSpraying:
+                            <img class="messageIcon" src="/img/iherbicide.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.InsecticideSpraying:
+                            <img class="messageIcon" src="/img/iinsecticide.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.NitrogenApplication:
+                            <img class="messageIcon" src="/img/initrogen.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.Notes:
+                            <img class="messageIcon" src="/img/inotes.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.PlantEarHeights:
+                            <img class="messageIcon" src="/img/ipande.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.Staking:
+                            <img class="messageIcon" src="/img/istake.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.StandCounts:
+                            <img class="messageIcon" src="/img/istandcounts.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.WeedManagement:
+                            <img class="messageIcon" src="/img/ihoe.png" alt="KRNL">
+                            break;
+                        default:
+                            break;
+                    }
+
+                    @switch (item.JobThree)
+                    {
+                        case KRNL.Data.job.Cultivating:
+                            <img class="messageIcon" src="/img/iplow.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.DroneFlight:
+                            <img class="messageIcon" src="/img/idrone.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.HerbicideSpraying:
+                            <img class="messageIcon" src="/img/iherbicide.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.InsecticideSpraying:
+                            <img class="messageIcon" src="/img/iinsecticide.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.NitrogenApplication:
+                            <img class="messageIcon" src="/img/initrogen.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.Notes:
+                            <img class="messageIcon" src="/img/inotes.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.PlantEarHeights:
+                            <img class="messageIcon" src="/img/ipande.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.Staking:
+                            <img class="messageIcon" src="/img/istake.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.StandCounts:
+                            <img class="messageIcon" src="/img/istandcounts.png" alt="KRNL">
+                            break;
+                        case KRNL.Data.job.WeedManagement:
+                            <img class="messageIcon" src="/img/ihoe.png" alt="KRNL">
+                            break;
+                        default:
+                            break;
+                    }
+                </td>
+            </tr>
+        </tbody>
+    }
 </table>
+
